# harvester

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  STATUS.md  harvester-config.yaml  pyproject.toml  start.sh  stop.sh
.claude/skills/prd-creator/: README.md  SKILL.md
.claude/skills/project-context/: SKILL.md
archive/: F18-addendum-subscription-overnight.md  F18-github-improvement-loop.md  F18-technical-guide.md  F19-harvester-improvement-service.md  F19-harvester-v2-direct-build.md
docs/: agent-runner-notes.md  ezra-technical-guide.md  onboarding-guide.md  operational-runbook.md  scanner-contract.md
scripts/: agent-runner.sh  install-launchd.sh
src/harvester/: __main__.py  config.py  github_client.py  main.py  models.py  notifier.py  queue.py  reconcile.py  runner.py  scanner_runner.py  scheduler.py  tools.py  webhook.py  writer.py
tasks/: F01-S01-bootstrap-scaffolding.md  F01-S02-github-integration.md  F01-S03-scheduler-queue.md  F01-S04-port-scanners.md  F01-S05-agent-runner.md  F01-S06-webhook-state-sync.md  F01-harvester-core.md  F02-S01-web-ui.md  F02-S02-selah-guardrails.md  F02-S03-code-health-scanner.md  F02-S04-cross-repo-pattern.md  F02-S05-remove-ezra-native.md  F02-S06-telegram-notifications.md  F02-harvester-completion.md  human-test.md  needs-improvement.md
tests/: test_config.py  test_github_client.py  test_queue.py  test_reconcile.py  test_scanner_runner.py  test_scheduler.py  test_webhook.py  test_webhook_dispatch.py  test_writer.py
tests/scanners/: test_memory.py  test_skill_gaps.py  test_tokens.py
(+12 files in other folders)
